--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "node-cron": "^3.0.3",
+    "nodemon": "^3.1.0"
   }
 }
