--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
-    "express": "^4.18.2"
-  },
-  "devDependencies": {
-    "node-cron": "^3.0.3",
-    "nodemon": "^3.1.0"
+    "express": "^4.18.2",
+    "node-cron": "^3.0.3"
   }
 }
